[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Plataforma.tscn" type="PackedScene" id=1]
[ext_resource path="res://img/piso1.png" type="Texture" id=2]
[ext_resource path="res://scenes/Violeta.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Caja.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/RestartButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Pentagono.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/AvanzarLbl.tscn" type="PackedScene" id=7]
[ext_resource path="res://img/piso2.png" type="Texture" id=8]
[ext_resource path="res://img/background.jpg" type="Texture" id=9]
[ext_resource path="res://scripts/Level 2.gd" type="Script" id=10]
[ext_resource path="res://scenes/Hint.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ExitBtn.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/BackgroundPlayer.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 370.904, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 153.314, 10 )

[node name="Level 2" type="Node2D"]
script = ExtResource( 10 )

[node name="Plataforma1" parent="." instance=ExtResource( 1 )]
position = Vector2( 652.852, 399.146 )

[node name="Caja1" parent="." instance=ExtResource( 4 )]
position = Vector2( -73.5675, 118.32 )
mode = 2

[node name="Caja2" parent="." instance=ExtResource( 4 )]
position = Vector2( 72.2777, 123.805 )
mode = 2

[node name="Fondo" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Fondo"]

[node name="background" type="Sprite" parent="Fondo/ParallaxLayer"]
position = Vector2( 640.103, 418.181 )
z_index = -1
texture = ExtResource( 9 )

[node name="Floor" type="StaticBody2D" parent="Fondo/ParallaxLayer"]

[node name="piso2" type="Sprite" parent="Fondo/ParallaxLayer/Floor"]
position = Vector2( 1170.03, 676.888 )
scale = Vector2( 2.36787, 0.936745 )
texture = ExtResource( 8 )

[node name="piso3" type="Sprite" parent="Fondo/ParallaxLayer/Floor"]
position = Vector2( 363.744, 677.726 )
scale = Vector2( 7.797, 0.915 )
texture = ExtResource( 8 )

[node name="piso4" type="Sprite" parent="Fondo/ParallaxLayer/Floor"]
position = Vector2( 1173.16, 666.396 )
scale = Vector2( 2.45063, 1 )
texture = ExtResource( 2 )

[node name="piso1" type="Sprite" parent="Fondo/ParallaxLayer/Floor"]
position = Vector2( 363.653, 665.286 )
scale = Vector2( 7.79717, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fondo/ParallaxLayer/Floor"]
position = Vector2( 357.403, 626.786 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fondo/ParallaxLayer/Floor"]
position = Vector2( 1209.38, 627.016 )
shape = SubResource( 2 )

[node name="AvanzarLbl" parent="." instance=ExtResource( 7 )]
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="PolygonEnd" parent="." instance=ExtResource( 6 )]

[node name="RestartButton" parent="." instance=ExtResource( 5 )]
margin_left = 1231.56
margin_top = 28.9662
margin_right = 1259.56
margin_bottom = 64.9662

[node name="Violeta" parent="." instance=ExtResource( 3 )]
position = Vector2( -114.038, 113.496 )

[node name="PolygonStart" parent="." instance=ExtResource( 6 )]
position = Vector2( -958.622, 0 )

[node name="Hint" parent="." instance=ExtResource( 11 )]
text = "Podes usar la plataforma
 para pasar al otro lado"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="ExitBtn" parent="." instance=ExtResource( 12 )]
position = Vector2( 938.496, -490.406 )

[node name="BackgroundPlayer" parent="." instance=ExtResource( 13 )]
[connection signal="body_entered" from="PolygonEnd" to="." method="_on_PolygonEnd_body_entered"]
[connection signal="body_exited" from="PolygonEnd" to="." method="_on_PolygonEnd_body_exited"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
